// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / ShowMoreButton Aligned Left 1`] = `
Array [
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    Ex fugit nulla veritatis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur distinctio dolore iure nihil quam quis vel. Aut autem consequatur ex impedit magni molestias obcaecati omnis possimus! Consectetur distinctio dolore iure nihil quam quis vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda corporis dolorum, facilis id illum ipsam ipsum maxime modi necessitatibus nemo nostrum odio odit officia praesentium provident quod totam vero.
  </span>,
  .c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #0046FF;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: pointer;
  font-weight: inherit;
}

.c1,
.c1[type='button'],
.c1[type='reset'],
.c1[type='submit'] {
  -webkit-appearance: button;
}

.c1::-moz-focus-inner,
.c1[type='button']::-moz-focus-inner,
.c1[type='reset']::-moz-focus-inner,
.c1[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c1:-moz-focusring,
.c1[type='button']:-moz-focusring,
.c1[type='reset']:-moz-focusring,
.c1[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  margin-left: 4px;
}

<div
    className="c0"
  >
    <button
      aria-expanded={false}
      className="NormalizedButton__Button-ey7f5x-0 c1"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c2"
      >
        Show more
        <svg
          aria-hidden="true"
          className="c3 c4 c5"
          direction="down"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
          />
        </svg>
      </span>
    </button>
  </div>,
]
`;

exports[`Storyshots Molecules / ShowMoreButton Default 1`] = `
Array [
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    Consectetur distinctio dolore iure nihil quam quis vel. Aut autem consequatur ex impedit magni molestias obcaecati omnis possimus! Consectetur distinctio dolore iure nihil quam quis vel. Aut autem consequatur ex impedit magni molestias obcaecati omnis possimus! Ex fugit nulla veritatis!
  </span>,
  .c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #0046FF;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: pointer;
  font-weight: inherit;
}

.c1,
.c1[type='button'],
.c1[type='reset'],
.c1[type='submit'] {
  -webkit-appearance: button;
}

.c1::-moz-focus-inner,
.c1[type='button']::-moz-focus-inner,
.c1[type='reset']::-moz-focus-inner,
.c1[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c1:-moz-focusring,
.c1[type='button']:-moz-focusring,
.c1[type='reset']:-moz-focusring,
.c1[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  margin-left: 4px;
}

<div
    className="c0"
  >
    <button
      aria-expanded={false}
      className="NormalizedButton__Button-ey7f5x-0 c1"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c2"
      >
        Show more
        <svg
          aria-hidden="true"
          className="c3 c4 c5"
          direction="down"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
          />
        </svg>
      </span>
    </button>
  </div>,
]
`;

exports[`Storyshots Molecules / ShowMoreButton Disabled 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #A0A09B;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: not-allowed;
  font-weight: inherit;
}

.c1,
.c1[type='button'],
.c1[type='reset'],
.c1[type='submit'] {
  -webkit-appearance: button;
}

.c1::-moz-focus-inner,
.c1[type='button']::-moz-focus-inner,
.c1[type='reset']::-moz-focus-inner,
.c1[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c1:-moz-focusring,
.c1[type='button']:-moz-focusring,
.c1[type='reset']:-moz-focusring,
.c1[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  margin-left: 4px;
}

<div
  className="c0"
>
  <button
    aria-expanded={false}
    className="NormalizedButton__Button-ey7f5x-0 c1"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="c2"
    >
      Show more
      <svg
        aria-hidden="true"
        className="c3 c4 c5"
        direction="down"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <polygon
          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Molecules / ShowMoreButton Loading 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  display: inline-block;
  -webkit-animation: spinner 0.6s linear infinite;
  animation: spinner 0.6s linear infinite;
}

.c3 {
  display: block;
}

.c1 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #0046FF;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: pointer;
  font-weight: inherit;
}

.c1,
.c1[type='button'],
.c1[type='reset'],
.c1[type='submit'] {
  -webkit-appearance: button;
}

.c1::-moz-focus-inner,
.c1[type='button']::-moz-focus-inner,
.c1[type='reset']::-moz-focus-inner,
.c1[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c1:-moz-focusring,
.c1[type='button']:-moz-focusring,
.c1[type='reset']:-moz-focusring,
.c1[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="c0"
>
  <button
    aria-expanded={false}
    className="NormalizedButton__Button-ey7f5x-0 c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="c2"
    >
      <svg
        className="c3"
        height={16}
        viewBox="0 0 24 24"
        width={16}
      >
        <defs>
          <linearGradient
            id="spinner-65val-Spinner-1"
            x1="50%"
            x2="50%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stopColor="#0046FF"
              stopOpacity="0"
            />
            <stop
              offset="100%"
              stopColor="#0046FF"
              stopOpacity=".5"
            />
          </linearGradient>
          <linearGradient
            id="spinner-65val-Spinner-2"
            x1="50%"
            x2="50%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stopColor="#0046FF"
              stopOpacity=".5"
            />
            <stop
              offset="100%"
              stopColor="#0046FF"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
            fill="url(#spinner-65val-Spinner-1)"
          />
          <path
            d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
            fill="url(#spinner-65val-Spinner-2)"
            transform="rotate(-180 6 12)"
          />
        </g>
      </svg>
    </span>
  </button>
</div>
`;
